# echopype-checker

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
echopype_checker/: __init__.py
echopype_checker/cdls/: CDLsource-Platform-D20211005-T001612.cdl  CDLsource-Sonar-Beam_group1-D20211005-T001612.cdl
notebooks/: azfp-convention-checker.ipynb  checker-objects.ipynb  convention-checker.ipynb  ek60-convention-checker.ipynb  ek80-convention-checker.ipynb
sonarnetcdf4-echopype-checker/cdls/: CDLsource-Platform-D20211005-T001612.cdl  CDLsource-Platform-D20211005-T001612.nc  echopype-D20211005-T001612-20230530.cdl
sonarnetcdf4_echopype_checker/: cc.py
sonarnetcdf4_echopype_checker/cdls/: CDLsource-Platform-D20211005-T001612.cdl  CDLsource-Platform-D20211005-T001612.nc  CDLsource-Sonar-Beam_group1-D20211005-T001612.cdl  CDLsource-Sonar-Beam_group1-D20211005-T001612.nc
