[metadata]
name = echopype-checker
maintainer = Emilio Mayorga
maintainer_email = emiliomayorga@gmail.com
description = Compliance checker for the echopype adaptation of SONAR-netCDF v1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OSOceanAcoustics/echopype-checker/
license = Apache License, Version 2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
author = Emilio Mayorga
author_email = emiliomayorga@gmail.com
platforms = OS Independent

# [black]
# line-length = 100

# [flake8]
# max-line-length = 100
# output-file = flake8_log.txt
# tee = True
# ignore = E722,E203,W503,T001

# [isort]
# multi_line_output = 3
# include_trailing_comma = True
# force_grid_wrap = 0
# combine_as_imports = True
# line_length = 100
